    * "get/set menu cancel button menu" and "get/set menu item spacing" [Ralph]
    * "menu item disabled", "menu item visible", "menu item selectable" [Ralph]
    * "get/set menu disabled textcolor", "get/set menu item color",
      "get/set menu item disabled color" [Ralph]
    * "pathfind hero to", "hero chases npc" and "cancel hero walk" [James]
    * "read preference bitset", "write preference bitset" [Ralph]
    * "pick hero" has two new args to let you pick the prompt message, and to
      auto-pick if there's only one active hero [Ralph]

  * Changes
    * "Previous attack" base ATK stat renamed to "Last damage by attacker"
    * "Caption" menu item type renamed to "Label", the "Unselectable" subtype
      of Labels renamed to "Disabled", and the "Close menu if selected" bit
      renamed to "Close menu when activated"
    * In-battle instant-run debug key moved from Ctrl-F4 to Ctrl-F5

  * Bugfixes
    * Fix a major memory leak while recording .gifs [Ralph]
    * Couldn't copy-paste text containing characters above ASCII 127 [Ralph]
    * Panel slices set to clip had broken child clipping and positioning
      when inside another clipping slice or over the screen edge [Ralph]
    * In the textbox editor, pressing Ctrl+Left/Right to link to another box
      appeared to work but actually the "After" tag condition didn't
      get set to "Always", although it claimed it was. It didn't actually
      get set to "Always" until you entered a submenu. The in-game F1
      textbox debug screen also showed "ALWAYS" instead of "NEVER"! [Ralph]
    * Fixed "delete_ScriptData" error when quitting after having stopped
      a script in the script debugger [Ralph]
    * "hero z" could incorrectly throw "invalid party slot" errors, but
      its argument is actually party caterpillar rank [Ralph]
    * The width of a Text slice didn't update after changing the text in the
      slice editor [Ralph]