@@ -68,6 +68,7 @@ June (mumble) 2018 [Fufluns]
     * "get/set menu disabled textcolor", "get/set menu item color",
       "get/set menu item disabled color" [Ralph]
     * "pathfind hero to", "hero chases npc" and "cancel hero walk" [James]
+    * NPCstat:pathfindingrule constant for "read npc"/"alter npc" [Ralph]
     * "read preference bitset", "write preference bitset" [Ralph]
     * "pick hero" has two new args to let you pick the prompt message, and to
       auto-pick if there's only one active hero [Ralph]
